--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 		<div id="container"></div>
 
 		<!-- Scripts de biblioteca -->
-		<script src="lib/three.min_r140.js"></script>
-		<script src="lib/OrbitControls.js"></script>
+		<script src="GPC/lib/three.min_r140.js"></script>
+		<script src="GPC/lib/OrbitControls.js"></script>
 
-		<script src="js/test.js"></script>
+		<script src="GPC/js/test.js"></script>
 
 	</body>
 </html>
