--- a/GPC/practica1.html
+++ b/GPC/practica1.html
@@ -19,7 +19,7 @@
 		<script src="lib/three.min_r140.js"></script>
 		<script src="lib/OrbitControls.js"></script>
 
-		<script src="js/test.js"></script>
+		<script src="js/practica1.js"></script>
 
 	</body>
 </html>
