--- a/GPC/practica1.html
+++ b/GPC/practica1.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<!-- Contenedor del app -->
-		<div id="container"><canvas id="canvas" width="500px" height="500px"></canvas></div>
+		<div id="container"></div>
 
 		<!-- Scripts de biblioteca -->
 		<script src="lib/three.min_r140.js"></script>
