--- a/GPC/practica1.html
+++ b/GPC/practica1.html
@@ -13,11 +13,13 @@
 	</head>
 	<body onload="main()">
 		<!-- Contenedor del app -->
-		<canvas id="canvas" width="500" height="500"></canvas>
+		<canvas id="canvas" width="400" height="300"></canvas>
 
 		<!-- Scripts de biblioteca -->
         <script src="lib/webgl-utils.js"></script>
         <script src="lib/webgl-debug.js"></script>
+		<script src="lib/cuon-utils.js"></script>
+        <script src="lib/cuon-matrix.js"></script>
 
         <!-- Script programa -->
 		<script src="js/practica1.js"></script>
