--- a/GPC/practica1.html
+++ b/GPC/practica1.html
@@ -4,11 +4,11 @@
 		<meta charset='utf-8'>
 		<title>Práctica 1</title>
 		<style>
-			body {
-				background-color: #000;
-				margin: 0px;
-				overflow: hidden;
-			}
+			body{ background-color: white;
+                  margin: 0px;
+                  overflow: hidden;
+                }
+            canvas { background-color: white;}
 		</style>
 	</head>
 	<body onload="main()">
