--- a/GPC/proyecto.html
+++ b/GPC/proyecto.html
@@ -28,8 +28,7 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "./lib/three.module.js",
-        "cannon-es": "./lib/cannon-es.js"
+        "three": "./lib/three.module.js"
       }
     }
   </script>
