--- a/GPC/proyecto.html
+++ b/GPC/proyecto.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <div id="instructions">
-    (W,A,S,D = Move, F = Cannon Debugger, G = ThreeJS Options)
+    (W,A,S,D = Move, F = Cannon Debugger, R = Restart)
   </div>
   <script type="importmap">
     {
