--- a/GPC/proyecto.html
+++ b/GPC/proyecto.html
@@ -19,12 +19,55 @@
         color: #ffffff;
         text-align: center;
     }
+
+    #puntuacion {
+        position: absolute;
+        top: 20;
+
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        align-items: flex-start;
+        padding-left: 10pt;
+
+        color: #00580c;
+        text-align: left;
+        font-size: 20pt;
+    }
+
+    #gameover {
+        position: absolute;
+        top: 50;
+
+        width: 100%;
+        height: 70%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        visibility: hidden;
+
+        color: #e61010;
+        text-align: center;
+        font-size: 40pt;
+    }
   </style>
 </head>
 <body>
   <div id="instructions">
-    (W,A,S,D = Move, F = Cannon Debugger, R = Restart)
+    (W,A,S,D = Moverse, R = Reiniciar, Shift = Turbo, Espacio = Salto)
   </div>
+  <div id="puntuacion">
+    <label>Puntos: </label>
+  </div>
+
+  <div id="gameover">
+    GAME OVER
+  </div>
+
   <script type="importmap">
     {
       "imports": {
