--- a/GPC/proyecto.html
+++ b/GPC/proyecto.html
@@ -37,6 +37,23 @@
         font-size: 20pt;
     }
 
+    #turbo {
+        position: absolute;
+        top: 60;
+
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        align-items: flex-start;
+        padding-left: 10pt;
+
+        color: #00580c;
+        text-align: left;
+        font-size: 20pt;
+    }
+
     #gameover {
         position: absolute;
         top: 50;
@@ -57,15 +74,16 @@
   </style>
 </head>
 <body>
-  <div id="instructions">
-    (W,A,S,D = Moverse, R = Reiniciar, Shift = Turbo, Espacio = Salto)
-  </div>
   <div id="puntuacion">
     <label>Puntos: </label>
+  </div>
+  <div id="turbo">
+    <label>Turbo: </label>
   </div>
 
   <div id="gameover">
     GAME OVER
+    (Pulsa R para continuar)
   </div>
 
   <script type="importmap">
